# impossibly

./: .env.template  .flake8  .gitignore  Dockerfile.test  README.md  agent.py  compose.test.yml  graph.py  pyproject.toml  run_tests_in_docker.sh  run_tests_locally.sh  setup.py
.github/workflows/: deploy-production.yml  docs.yml  python-package.yml  validate-docs.yml
.venv-new/: pyvenv.cfg
docs/: requirements.txt  vercel.json
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
examples/: chained_image_agents.py  conversation_agents.py  conversational_MoE.py  image_agent.py  mixture_of_experts.py  singly_linked_graph.py
examples/chained_image_agents/: README.md  chained_image_agents.py
examples/conversation_agents/: README.md  conversation_agents.py
examples/conversational_MoE/: README.md  conversational_MoE.py  requirements.txt
examples/conversational_web_search/: conversational_web_search.py  requirements.txt
examples/dynamic_delegation/: README.md  dynamic_delegation.py  requirements.txt
examples/image_agent/: README.md  image_agent.py
examples/mixture_of_experts/: README.md  mixture_of_experts.py
examples/single_node_streaming/: single_node_streaming.py
examples/singly_linked_graph/: README.md  singly_linked_graph.py
examples/tool_agent/: README.md  tool_agent.py
examples/web_search_agent/: web_search_agent.py
src/imagination_engine/: __init__.py  agent.py  graph.py
src/imengine/: agent.py  graph.py
tests/: README.md  conftest.py
tests/data/: data.json  large_document.txt  sample.txt  unsupported.xyz
tests/scripts/: output  (+4 more)
(+16 files in other folders)
